# ctaylor

./: .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE.txt  Makefile  README.md  cjacobian.cpp  cjacobian.h  ctaylor.cpp  ctaylor.h  ctaylor.sln  ctaylor.vcxproj  ctaylor.vcxproj.filters  initializer_list.h  maxima.txt  merge_sorted_sets.h  readme.md  readme.txt  taylor_series_expansions.h  test.cpp  vcpkg.json
.github/workflows/: ci.yml  vcpkg-update.yml
BLACK_SCHOLES/: BLACK_SCHOLES.vcxproj  BLACK_SCHOLES.vcxproj.filters  autodiff_black_scholes.cpp  autodiff_black_scholes_orig.cpp
BLACK_SCHOLES_ORIG/: BLACK_SCHOLES_ORIG.vcxproj  BLACK_SCHOLES_ORIG.vcxproj.filters
LUFAC/: lufac.cpp  lufac.h
VBIC95/: PARS  VBIC95.cpp  VBIC95.vcxproj  VBIC95.vcxproj.filters  circuitNodes.h  currentSources.h  inputs.h  members.h  nodes.h  outputs.h  parameters.h  temperatureSetup.h  temperatureSetupTemporaries.h
VBIC95Jac/: VBIC95Jac.cpp  VBIC95Jac.vcxproj  VBIC95Jac.vcxproj.filters
cjacobian/: cjacobian.vcxproj  cjacobian.vcxproj.filters
ctaylor_test/: ctaylor_test.cpp  ctaylor_test.vcxproj  ctaylor_test.vcxproj.filters  pch.h
logistic_regression/: logistic_regression.cpp  logistic_regression.vcxproj  logistic_regression.vcxproj.filters
test/: Test1.cpp  data0.txt  data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data2.txt  data20.txt  data21.txt  data22.txt  data23.txt  data24.txt  data25.txt  data26.txt  data27.txt  data28.txt  data29.txt  data3.txt  data30.txt  data31.txt  data32.txt  data33.txt  data34.txt  data35.txt  data36.txt  data37.txt  data38.txt  data39.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  (+85 more)
